Added local assortativity in Notebook

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import networkx as nx\n",
-    "import assortativity as a\n",
+    "from assortativity import measures as m\n",
+    "from assortativity import tools\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -41,13 +41,17 @@
     "#Load the \"Structural Connectome\" from data folder, and convert to binary\n",
     "SC = np.load(\"data/SC.npy\")\n",
     "SC[SC>0] = 1\n",
+    "\n",
     "#Load T1wT2w information available for this connectome\n",
     "T1wT2w = np.load(\"data/T1wT2w.npy\")\n",
     "\n",
-    "#Compute Global Assortativity, for the degree attribute\n",
-    "ga_deg = a.globalAssort(SC, np.sum(SC, axis=0))\n",
-    "#Compute Global Assortativity, for the T1wT2w attribute\n",
-    "ga_mye = a.globalAssort(SC, T1wT2w)\n",
+    "#Compute Global Assortativity\n",
+    "ga_deg = m.globalAssort(SC, np.sum(SC, axis=0))  #Degree Attribute\n",
+    "ga_mye = m.globalAssort(SC, T1wT2w)              #T1w/T2w Attribute\n",
+    "\n",
+    "#Compute Local Assortativity (Using pagerank, with probability of restart of 0.99)\n",
+    "la_deg,w = m.localAssort(SC, np.sum(SC, axis=0), pr=0.99)  #Degree Attribute\n",
+    "la_mye,_ = m.localAssort(SC, T1wT2w, pr=0.99)              #T1w/T2w Attribute\n",
     "\n",
     "#Print results\n",
     "print(\"Degree Global Assortativity: \"+str(ga_deg))\n",
@@ -71,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
